--- a/challengica/challengica_app/templates/notfound.html
+++ b/challengica/challengica_app/templates/notfound.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Wrong Answer</h1>
-        <img src="/static/memes/meme_n_{{meme_no}}.jpeg">
+        <img src="/static/memes/meme_n_{{meme_no}}.jpg">
     </body>
 </html>
