--- a/challengica/challengica_app/templates/homepage.html
+++ b/challengica/challengica_app/templates/homepage.html
@@ -6,7 +6,8 @@
     <body>
         <h1>Welcome to Challengica</h1>
         <p>Please read the rules before you proceed further</p>
-        <form method="POST" class="post-form">{% csrf_token %}
+        <form method="POST" class="post-form">
+            {% csrf_token %}
             {{form.as_p}}
             <button type="submit" class="save btn btn-default">Save</button>
         </form>
