--- a/challengica/challengica_app/templates/questions.html
+++ b/challengica/challengica_app/templates/questions.html
@@ -3,17 +3,16 @@
     <head>
         <title>Questions</title>
     </head>
-    <body style="overflow:visible">
-        <div id="meme_p" style="position:fixed;top:0">
+    <body style="overflow-y:visible">
+        <div id="meme_p" style="position:absolute;top:0">
             <h1>Correct Answer</h1>
-            <img src="/static/memes/meme_p_{{ meme_no }}.jpg" height="50%" width="auto">
+            <img src="/static/memes/meme_p_{{ meme_no }}.jpg" height="100%" style="max-width:100%">
             <button onclick="showquest()">Show question</button>
         </div>
-        <div id="ques" style="position:fixed;top:0">
+        <div id="ques" style="position:absolute;top:0">
             <h1>Question no. {{ q_no }}</h1>
+            <img src="/static/questions/{{ ques_img }}.jpg" height="100%" style="max-width:100%">
             <p style="color:black;font-size:150%;">{{ ques_text }}</p>
-            <img src="/static/questions/{{ ques_img }}.jpg" height="50%" width="auto">
-            
         </div>
         <script>
             meme = document.getElementById("meme_p");
