--- a/challengica/challengica_app/templates/questions.html
+++ b/challengica/challengica_app/templates/questions.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Questions</title>
+        <style>
+            {% if q_no == 6 %}
+            #qtext:hover {
+                color: silver;
+            }
+            {% endif %}
+        </style>
     </head>
     <body style="overflow-y:visible">
         <div id="meme_p" style="position:absolute;top:0">
@@ -12,11 +19,12 @@
         <div id="ques" style="position:absolute;top:0">
             <h1>Question no. {{ q_no }}</h1>
             <img src="/static/questions/{{ ques_img }}.jpg" height="100%" style="max-width:100%">
-            <p style="color:black;font-size:150%;">{{ ques_text }}</p>
+            <p id="qtext" style="color:black;font-size:150%;">{{ ques_text }}</p>
         </div>
         <script>
             meme = document.getElementById("meme_p");
             ques = document.getElementById("ques");
+            qtext = document.getElementById("qtext");
             ques.style.visibility = "hidden";
             function showquest(){
                 meme.style.visibility = "hidden";
@@ -28,7 +36,9 @@
             }
             if(qno == '6'){
                 document.body.style.backgroundColor = "black";
-
+                qtext.addEventListener("hover", function(e){
+                    qtext.style.color = "silver";
+                });
             }
         </script>
     </body>
